moved final project to respective folder + text enlarges on lightvsdark

--- a/DES157/final/finalproject/index.html
+++ b/DES157/final/finalproject/index.html
@@ -24,7 +24,7 @@
   </svg>
 
   <header>
-    <h1 class="static">Anthony Chow</h1>
+    <h1 class="static"><a href="https://achow605.github.io/DES157/">Anthony Chow</a></h1>
     <div class="static underline normalWidth"></div>
 
     <img src="images/q1.svg" alt="Progress bar" id="progress" class="hidden">
@@ -106,7 +106,7 @@
       <a class="hidden">Next</a>
     </section>
     <section id="q3">
-      <h1>Light Mode or Dark Mode?</h1>
+      <h1 id="modeOptions"><span class="darkmode">Dark Mode</span> or <span class="lightmode">Light Mode?</span></h1>
       <div class="answers">
         <label class="switch">
           <input type="checkbox">
@@ -130,7 +130,7 @@
     <section id="results" class="hidden">
       <h2>You are a <strong><span>swiss cheest plant</span>!</strong></h2>
       <p>a.k.a. <em>monstera deliciosa</em></p>
-      <img alt="your plant">
+      <img src="images/monstera.jpg" alt="your plant">
       <a>One more thyme!</a>
     </section>
   </main>
