--- a/DES157/index.html
+++ b/DES157/index.html
@@ -71,7 +71,7 @@
       <ul>
         <li>Final
           <ul>
-            <li><a href="#">Final Project</a></li>
+            <li><a href="final/finalproject">Final Project</a></li>
           </ul>
         </li>
       </ul>
