title spelling on restart button

--- a/DES157/final/finalproject/index.html
+++ b/DES157/final/finalproject/index.html
@@ -131,7 +131,7 @@
       <h2>You are a <strong><span>swiss cheest plant</span>!</strong></h2>
       <p>a.k.a. <em>monstera deliciosa</em></p>
       <img src="images/monstera.jpg" alt="your plant">
-      <a>One more thyme!</a>
+      <a>One More Thyme!</a>
     </section>
   </main>
   <footer>
