fixed typo on results page and changed subtext on start

--- a/DES157/final/finalproject/index.html
+++ b/DES157/final/finalproject/index.html
@@ -47,7 +47,7 @@
 
       <h1>Plantifest</h1>
       <div></div>
-      <p>Find out which plant you identify most with</p>
+      <p>If you were a plant, what kind would you be?</p>
       <a id="start-btn">Let's Grow!</a>
     </section>
 
@@ -128,7 +128,7 @@
       </svg>
     </section>
     <section id="results" class="hidden">
-      <h2>You are a <strong><span>swiss cheest plant</span>!</strong></h2>
+      <h2>You are a <strong><span>swiss cheese plant</span>!</strong></h2>
       <p>a.k.a. <em>monstera deliciosa</em></p>
       <img src="images/monstera.jpg" alt="your plant">
       <a>One More Thyme!</a>
