changed mobile message

--- a/DES157/final/finalproject/index.html
+++ b/DES157/final/finalproject/index.html
@@ -20,7 +20,7 @@
 
   <div class="mobile">
     <h1>Sorry to kale the mood!</h1>
-    <h2>Mobile and tablet view is not supported at the moment :(</h2>
+    <h2>Please view fullscreen on a laptop or desktop</h2>
   </div>
 
   <svg id="start-bg" width="257" height="271" viewBox="0 0 257 271" fill="none" xmlns="http://www.w3.org/2000/svg">
