--- a/des157b/index.html
+++ b/des157b/index.html
@@ -1,12 +1,120 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home is...DES 157B!</title>
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
+
+    <link href="styles.css" rel="stylesheet" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Quicksand:wght@300;400&display=swap" rel="stylesheet">    
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
 </head>
+
 <body>
-    <h1>Hello World</h1>  
+
+    <div id="container">
+
+        <header>
+
+            <h1>
+                Anthony Chow
+            </h1>
+
+            <h2>DES 157B - Interactive Media III - w 2022
+            </h2>
+
+            <!--this is for the interactive banner-->
+            <div id="banner">
+                <img id="boat" class="float-boat" src="images/boat.png" alt="boat">
+                <img id="boat-reflection" class="float-reflection" src="images/boat-reflection.png" alt="boat reflection">
+                <img id="windows" class="night" src="images/windows.svg" alt="windows">
+                <img id="lantern" class="float-boat night" src="images/lantern.svg" alt="lantern">
+            </div>
+
+        </header>
+
+        <main>
+
+            <section id="projects">
+
+                <h3>ministudios</h3>
+                <nav>
+                    <ol>
+                        <li><a href="#">blockbuster video</a></li>
+                        <li><a href="#">check yourself</a></li>
+                        <li><a href="#">library liberty</a></li>
+                    </ol>
+                </nav>
+                <h3>toolkit</h3>
+                <nav>
+                    <ol>
+                        <li><a href="#">touch events</a></li>
+                        <li><a href="#">lazy loader</a></li>
+                        <li><a href="#">arrow functions</a></li>
+                    </ol>
+                </nav>
+
+            </section>
+
+            <section id="research">
+                <h3>research</h3>
+                <nav>
+                    <ul>
+                        <li><a href="#">annotated bibliography</a>
+                        </li>
+                        <li><a href="#">comparative analysis</a>
+                        </li>
+                        <li><a href="#">refined comp</a>
+                        </li>
+                        <li><a href="#">visual research</a>
+                        </li>
+                        <li><a href="#">feasibility report</a>
+                        </li>
+                    </ul>
+                </nav>
+
+            </section>
+
+            <section id="development">
+                <h3>development</h3>
+                <nav>
+                    <ul>
+                        <li><a href="#">mindmap</a></li>
+                        <li><a href="#">storyboard</a></li>
+                        <li><a href="#">flows</a></li>
+                        <li><a href="#">project brief</a></li>
+                        <li><a href="#">software prototype</a></li>
+                        <li><a href="#">version one</a></li>
+                        <li><a href="#">version two</a></li>
+                        <li><a href="#">user test</a></li>
+                        <li><a href="#">version three</a></li>
+                    </ul>
+                </nav>
+            </section>
+
+            <section id="final">
+                <h3>final</h3>
+                <nav>
+                    <ul>
+                        <li><a href="#">case study</a></li>
+                        <li><a href="#">final project</a></li>
+                    </ul>
+                </nav>
+            </section>
+
+            <button><i id="icon" class="fas fa-moon fa-lg"></i></button>
+
+        </main>
+
+    </div>
+
 </body>
+
 </html>
