--- a/des157b/blockbuster-video/index.html
+++ b/des157b/blockbuster-video/index.html
@@ -16,7 +16,7 @@
     <title>Blockbuster Video</title>
 </head>
 <body>
-    <video id="myVideo" loop autoplay muted plays-inline>
+    <video id="myVideo" loop autoplay muted playsinline>
         <source src="videos/IMG_0779.webm" type="video/webm">
         <source src="videos/IMG_0779.mp4" type="video/mp4">
         <p>Your browser does not support mp4 video. Click <a href="videos/IMG_0779.mp4">here</a> instead.</p>
