check yourself ministudio

--- a/des157b/index.html
+++ b/des157b/index.html
@@ -48,7 +48,7 @@
                 <nav>
                     <ol>
                         <li><a href="blockbuster-video">blockbuster video</a></li>
-                        <li><a href="#">check yourself</a></li>
+                        <li><a href="check-yourself">check yourself</a></li>
                         <li><a href="#">library liberty</a></li>
                     </ol>
                 </nav>
