library liberty nagivation

--- a/des157b/index.html
+++ b/des157b/index.html
@@ -49,7 +49,7 @@
                     <ol>
                         <li><a href="blockbuster-video">blockbuster video</a></li>
                         <li><a href="check-yourself">check yourself</a></li>
-                        <li><a href="#">library liberty</a></li>
+                        <li><a href="library-liberty">library liberty</a></li>
                     </ol>
                 </nav>
                 <h3>toolkit</h3>
