added link to brainstorm

--- a/des157b/index.html
+++ b/des157b/index.html
@@ -87,7 +87,7 @@
                 <h3>development</h3>
                 <nav>
                     <ul>
-                        <li><a href="#">mindmap</a></li>
+                        <li><a href="final/brainstorm.pdf" target="_blank">mindmap</a></li>
                         <li><a href="#">storyboard</a></li>
                         <li><a href="#">flows</a></li>
                         <li><a href="#">project brief</a></li>
