--- a/des157b/index.html
+++ b/des157b/index.html
@@ -68,9 +68,9 @@
                 <h3>research</h3>
                 <nav>
                     <ul>
-                        <li><a href="final/brainstorm.pdf">annotated bibliography</a>
+                        <li><a href="final/annotated-bib.pdf">annotated bibliography</a>
                         </li>
-                        <li><a href="final/annotated-bib.pdf">comparative analysis</a>
+                        <li><a href="#">comparative analysis</a>
                         </li>
                         <li><a href="#">refined comp</a>
                         </li>
