--- a/des157b/index.html
+++ b/des157b/index.html
@@ -88,7 +88,7 @@
                 <nav>
                     <ul>
                         <li><a href="final/brainstorm.pdf" target="_blank">mindmap</a></li>
-                        <li><a href="#">storyboard</a></li>
+                        <li><a href="final/storyboard.html">storyboard</a></li>
                         <li><a href="#">flows</a></li>
                         <li><a href="#">project brief</a></li>
                         <li><a href="#">software prototype</a></li>
