--- a/des157b/index.html
+++ b/des157b/index.html
@@ -70,7 +70,7 @@
                     <ul>
                         <li><a href="final/annotated-bib.pdf">annotated bibliography</a>
                         </li>
-                        <li><a href="#">comparative analysis</a>
+                        <li><a href="final/comparativeanalysis.pdf">comparative analysis</a>
                         </li>
                         <li><a href="#">refined comp</a>
                         </li>
