--- a/des157b/index.html
+++ b/des157b/index.html
@@ -76,7 +76,7 @@
                         </li>
                         <li><a href="final/moodboard.pdf">visual research</a>
                         </li>
-                        <li><a href="#">feasibility report</a>
+                        <li><a href="final/feasability.pdf">feasibility report</a>
                         </li>
                     </ul>
                 </nav>
