--- a/des157b/index.html
+++ b/des157b/index.html
@@ -90,6 +90,7 @@
                         <li><a href="final/brainstorm.pdf" target="_blank">mindmap</a></li>
                         <li><a href="final/storyboard.html">storyboard</a></li>
                         <li><a href="final/wireflow.pdf">flows</a></li>
+                        <li><a href="final/sketches.pdf">sketches</a></li>
                         <li><a href="final/brief.pdf">project brief</a></li>
                         <li><a href="#">software prototype</a></li>
                         <li><a href="#">version one</a></li>
