--- a/des157b/index.html
+++ b/des157b/index.html
@@ -88,11 +88,11 @@
                 <nav>
                     <ul>
                         <li><a href="final/brainstorm.pdf" target="_blank">mindmap</a></li>
-                        <li><a href="final/storyboard.html">storyboard</a></li>
-                        <li><a href="final/wireflow.pdf">flows</a></li>
-                        <li><a href="final/sketches.pdf">sketches</a></li>
-                        <li><a href="final/brief.pdf">project brief</a></li>
-                        <li><a href="#">software prototype</a></li>
+                        <li><a href="final/storyboard.html" target="_blank">storyboard</a></li>
+                        <li><a href="final/wireflow.pdf" target="_blank">flows</a></li>
+                        <li><a href="final/sketches.pdf" target="_blank">sketches</a></li>
+                        <li><a href="final/brief.pdf" target="_blank">project brief</a></li>
+                        <li><a href="https://www.figma.com/proto/WIKKE1JZEkM6XZ84NDOZGQ/DES-157B-Final-Development?page-id=0%3A1&node-id=12%3A9&viewport=241%2C48%2C0.31&scaling=min-zoom&starting-point-node-id=12%3A9" target="_blank">software prototype</a></li>
                         <li><a href="#">version one</a></li>
                         <li><a href="#">version two</a></li>
                         <li><a href="#">user test</a></li>
