--- a/des157b/index.html
+++ b/des157b/index.html
@@ -72,8 +72,6 @@
                         </li>
                         <li><a href="final/comparativeanalysis.pdf">comparative analysis</a>
                         </li>
-                        <li><a href="#">refined comp</a>
-                        </li>
                         <li><a href="final/moodboard.pdf">visual research</a>
                         </li>
                         <li><a href="final/feasability.pdf">feasibility report</a>
@@ -92,7 +90,7 @@
                         <li><a href="final/wireflow.pdf" target="_blank">flows</a></li>
                         <li><a href="final/sketches.pdf" target="_blank">sketches</a></li>
                         <li><a href="final/brief.pdf" target="_blank">project brief</a></li>
-                        <li><a href="https://www.figma.com/proto/WIKKE1JZEkM6XZ84NDOZGQ/DES-157B-Final-Development?page-id=0%3A1&node-id=12%3A9&viewport=241%2C48%2C0.31&scaling=min-zoom&starting-point-node-id=12%3A9" target="_blank">software prototype</a></li>
+                        <li><a href="https://www.figma.com/proto/WIKKE1JZEkM6XZ84NDOZGQ/DES-157B-Final-Development?page-id=0%3A1&node-id=12%3A9&viewport=241%2C48%2C0.31&scaling=min-zoom&starting-point-node-id=12%3A9" target="_blank">interactive comp</a></li>
                         <li><a href="#">version one</a></li>
                         <li><a href="#">version two</a></li>
                         <li><a href="#">user test</a></li>
