backapp + animated scroll arrow

--- a/des157b/final/version2/index.html
+++ b/des157b/final/version2/index.html
@@ -16,6 +16,8 @@
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
+    <script type="text/javascript" src="https://npmcdn.com/parse/dist/parse.min.js"></script>
 </head>
 
 <body>
@@ -26,7 +28,7 @@
 
         <div id="main">
             <div id="prompt">
-                <h1>What advice would you give yourself from a year ago?</h1>
+                <h1>What advice would you give yourself from five years ago?</h1>
             </div>
             <div id="prompt-container"><span id="typed"></span></div>
 
@@ -56,9 +58,7 @@
         <div id="cards1">
 
         </div>
-        <div id="cards2">
-
-        </div>
+        <i class="fa-solid fa-down-long"></i>
     </section>
 
     <div id="write-screen" class="hidden">
