--- a/des157b/final/usability-results.html
+++ b/des157b/final/usability-results.html
@@ -79,6 +79,17 @@
 
         <img src="images/screenshot2.png" alt="screenshot">
     </section>
+
+    <section>
+        <h1>Reflections</h1>
+        <p>1. I learned that people usually expect to see their response up at the top once they've submitted theirs</p>
+        <p>2. I learned that most people are viewing in a smaller display size so I should focus my designs accordingly</p>
+        <p>3. Most people seemed to enjoy the interface otherwise and had no other complaits or comments</p>
+
+        <h1>Future Updates</h1>
+        <p>Based on this feedback, I hope to include some more obvious indications of interaction for cards and figure out a way so that users can see their response as soon as they submit. I also want to include more breakpoints and try to make the two-column
+            card layout on smaller displays. </p>
+    </section>
 </body>
 
 </html>
