--- a/des157b/index.html
+++ b/des157b/index.html
@@ -95,7 +95,7 @@
                         <li><a href="final/version2">version two</a></li>
                         <li><a href="final/usability">user test</a></li>
                         <li><a href="final/usability-results.html">usability test results</a></li>
-                        <li><a href="#">version three</a></li>
+                        <li><a href="final/version3">version three</a></li>
                     </ul>
                 </nav>
             </section>
