--- a/des157b/index.html
+++ b/des157b/index.html
@@ -103,7 +103,7 @@
                 <h3>final</h3>
                 <nav>
                     <ul>
-                        <li><a href="presentation.pdf">presentation</a></li>
+                        <li><a href="final/presentation.pdf">presentation</a></li>
                         <li><a href="#">final project</a></li>
                     </ul>
                 </nav>
