--- a/des157b/index.html
+++ b/des157b/index.html
@@ -104,7 +104,7 @@
                 <nav>
                     <ul>
                         <li><a href="final/presentation.pdf">presentation</a></li>
-                        <li><a href="#">final project</a></li>
+                        <li><a href="final">final project</a></li>
                     </ul>
                 </nav>
             </section>
