--- a/des157b/final/index.html
+++ b/des157b/final/index.html
@@ -81,7 +81,7 @@
                 <label for="age">Your Age</label>
                 <input type="text" id="age" name="age" required>
 
-                <label for="response">What advice would you give yourself the last five years?</label>
+                <label for="response-s">What advice would you give yourself the last five years?</label>
                 <input type="text" id="response-s" name="shortResponse" placeholder="Short Response" required>
                 <textarea name="longResponse" id="response-l" rows="10" placeholder="Long Response (Optional)"></textarea>
 
